# anime-rest-api

./: .changie.yaml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.changes/unreleased/: Added-20240915-132901.yaml  Added-20240918-001941.yaml  Added-20240921-134036.yaml  Added-20240929-013544.yaml  Added-20240929-013748.yaml  Added-20240929-122606.yaml  Added-20240929-122848.yaml  Added-20240929-123517.yaml  Added-20240929-123941.yaml  Changed-20240929-013822.yaml  Internal-20240928-132001.yaml  Internal-20240929-015404.yaml  Internal-20240929-125259.yaml  Internal-20241201-010924.yaml
.github/workflows/: changelog.yaml  pre-commit.yaml  tests.yaml
scripts/: setup_db.py
src/anime_rest_api/: .env.template  main.py
src/anime_rest_api/api/: app.py  common_query.py  dependencies.py  log.py
src/anime_rest_api/api/models/: __init__.py  base.py  sessions.py  shows.py  users.py
src/anime_rest_api/api/routers/: __init__.py  session.py  session_routes.py  shows_routes.py  user_routes.py
src/anime_rest_api/db/: __init__.py  connection.py  errors.py
src/anime_rest_api/db/crud/: __init__.py  errors.py  show_operations.py  user_operations.py
src/anime_rest_api/db/models/: __init__.py  base.py  show_details.py  shows.py
src/anime_rest_api/db/models/auth/: __init__.py  base.py  user.py
src/anime_rest_api/db/models/content/: __init__.py  base.py  show_details.py  shows.py
tests/: README.md  conftest.py  test_package.py
tests/application/: test_start.py
tests/db/crud/: test_user_ops.py
tests/routes/: test_session_routes.py
